--- a/src/style/ChistoText.css
+++ b/src/style/ChistoText.css
@@ -122,7 +122,7 @@
 
 .blocksss{
     display: flex;
-    grid-gap: 10%;
+    grid-gap: 5%;
 }
 
 .Otzivi h1{
@@ -133,7 +133,7 @@
 
 .block1s{
     border: 2px solid rgb(195, 194, 194);
-    width: 40%;
+    width: 45%;
     height: 287.58px;
 }
 
@@ -142,6 +142,7 @@
     line-height: 30px;
     /* width: 86%; */
     padding-left: 9%;
+    padding-right: 9%;
     padding-top: 30px;
 }
 
